PagamentoMicroservice/pagamento-microservice-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: pagamento-microservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pagamento-microservice
  template:
    metadata:
      labels:
        app: pagamento-microservice
    spec:
      containers:
        - name: pagamento-microservice
          image: pagamento_microservice:latest  
          ports:
            - containerPort: 8080  
---
apiVersion: v1
kind: Service
metadata:
  name: pagamento-microservice-service
spec:
  selector:
    app: pagamento-microservice
  ports:
    - protocol: TCP
      port: 8080  
      targetPort: 8080  
  type: ClusterIP
